# zero2prod

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  configuration.toml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.toml  local.toml  production.toml
deployment/local/: ingress.yaml  values.yaml
deployment/zero2prod/: Chart.yaml  values.yaml
deployment/zero2prod/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deployment/zero2prod/templates/tests/: test-connection.yaml
migrations/: 20230507215823_add_status_to_subscriptions.sql  20230508185054_make_status_not_null_in_subscriptions.sql.sql  20230508191531_create_subscription_tokens_table.sql  20230519203451_create_users_table.sql  20230521211254_seed_user.sql  20230527115010_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh  pre-commit.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  models.rs  session_state.rs  startup.rs  telemetry.rs  templates.rs  utils.rs
src/authentication/: mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/home/html/: index.html
src/routes/login/: get.rs  post.rs
src/routes/login/html/: index.html
src/routes/signup/: get.rs  post.rs
src/templates/: admin_dashboard.rs  admin_newsletter.rs  change_password.rs  home.rs  login.rs  mod.rs  signup.rs  templates.rs
static/assets/sass/: noscript.scss
static/assets/sass/base/: _page.scss  _typography.scss
static/assets/sass/components/: _actions.scss  _box.scss  _features.scss  _form.scss  _list.scss  _row.scss  _section.scss  _split.scss  _table.scss
static/assets/sass/layout/: _footer.scss  _header.scss  _wrapper.scss
static/assets/webfonts/: fa-brands-400.eot  fa-regular-400.eot  fa-solid-900.eot
templates/: admin_dashboard.html  admin_newsletter.html  base.html  change_password.html  index.html  login.html  navbar.html  signup.html
tests/: health_check.rs  integration.rs
tests/api/: admin_dashboard.rs  admin_newsletters.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  signup.rs  subscriptions.rs  subscriptions_confirm.rs
